# procurve

./: .gitignore  README.rst  environment.yml  main_hastie.py  main_polynomial.py  main_snake.py  pyproject.toml  requirements.txt
examples/: figure_utils.py  main_examples.py  main_hastie.py  main_helix.py  main_polynomial.py  main_snake.py
src/procurve/: plotting.py  principal_curve.py  utils.py
